--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,8 @@
 <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
+      <ion-icon name="menu">
+      </ion-icon>
     </button>
     <ion-title>Home</ion-title>
   </ion-navbar>
@@ -9,6 +10,8 @@
 
 <ion-content padding>
 
+  tabla avisos
+  
   <div id="map_canvas">
 
   </div>
