--- a/src/pages/recover/recover.html
+++ b/src/pages/recover/recover.html
@@ -5,11 +5,13 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>recover</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu">
+      </ion-icon>
+    </button>
+    <ion-title>Recover</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
