--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -1,10 +1,12 @@
 
 <ion-header>
-
   <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu">
+      </ion-icon>
+    </button>
     <ion-title>Map</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
