--- a/src/pages/prevent/prevent.html
+++ b/src/pages/prevent/prevent.html
@@ -5,11 +5,13 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>prevent</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu">
+      </ion-icon>
+    </button>
+    <ion-title>Prevent</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
