integrate get, maps and camera methods

--- a/src/pages/report/report.html
+++ b/src/pages/report/report.html
@@ -32,7 +32,7 @@
         Please, submit a picture of the wildfire.
       </ion-col>
       <ion-col col-3>
-        <button ion-button large color="danger">
+        <button ion-button large color="danger" (click)="openCamera()">
           <ion-icon name='camera' item-start></ion-icon>
         </button>
       </ion-col>
