--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -78,7 +78,7 @@
   <ion-grid>
     <ion-row>
       <ion-col></ion-col>
-      <ion-col style="text-align: center"><button ion-button large color="danger"><ion-icon name='flame' item-start></ion-icon> Report Fire</button></ion-col>
+      <ion-col style="text-align: center"><button ion-button large color="danger" (click)="toReport()"><ion-icon name='flame' item-start></ion-icon> Report Fire</button></ion-col>
       <ion-col></ion-col>
     </ion-row>
   </ion-grid>
