Get typed evidences

--- a/src/pages/report/report.html
+++ b/src/pages/report/report.html
@@ -48,7 +48,7 @@
         <ion-col></ion-col>
         <ion-col style="text-align: center">
           <button ion-button large color="danger" (click)="reportFire()">
-            <ion-icon name='flame' item-start></ion-icon> Report Fire
+            <ion-icon class="flame-icon" name='flame' item-start></ion-icon> Report Fire
           </button></ion-col>
         <ion-col></ion-col>
       </ion-row>
